# uda

./: .gitignore
examples/: README.txt  build.sh  install.sql  pctbuild.sh  pctinstall.sh  pctinstall.sql  testpct.sql  testwvar.sql
examples/src/: CMakeLists.txt
examples/src/plugin/: CMakeLists.txt  percentile.cpp  sampleUdfs.cpp
test/: README.md  make_data.sh  rank_buses_pg.sql  rank_buses_ss.sql
